Fix overflow-x & images are responsive

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Kaushan+Script|Merriweather+Sans:300i,400i,700i|Volkhov:400i');
+html , body
+{
+  
+  overflow-x: hidden;
+
+}
 body {
 	font-size: 15px;
     line-height: 1.52;
